[gd_scene load_steps=3 format=3 uid="uid://bf68r36xmgay2"]

[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1_slqxg"]
[ext_resource type="Resource" uid="uid://s27b16pfh332" path="res://resources/themes/locations_brazil.tres" id="2_llxeo"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_slqxg")
quiz = ExtResource("2_llxeo")
color_right = Color(7.21961e-08, 0.417176, 0.0507209, 1)
color_wrong = Color(0.794399, 3.22476e-06, 9.62615e-07, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionHolder" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 656.0
grow_horizontal = 2
theme_override_constants/separation = 25

[node name="QuestionLabel" type="Label" parent="Control/QuestionHolder"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pergunta
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="Control/QuestionHolder"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionImage" type="TextureRect" parent="Control/QuestionHolder/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonHolder" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -537.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25

[node name="Button" type="Button" parent="Control/ButtonHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="Button2" type="Button" parent="Control/ButtonHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="Button3" type="Button" parent="Control/ButtonHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="Button4" type="Button" parent="Control/ButtonHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
